# portrait-booth-rs

./: .env.example  .gitignore  Cargo.toml  Design.md  Readme.md  compile-musl.sh  docker-compose-build.yml  docker-compose.yml  rust-build-alpine.dockerfile  rust-build-debian.dockerfile  rust-build-ubuntu1604.dockerfile  rust-build.dockerfile  rust-toolchain.toml  sqlx-data.json  start.sh  stop.sh  tailwind.config.js
backend/: Cargo.toml
backend/src/: main.rs
db/: .gitignore
dummy-macros/: Cargo.toml
dummy-macros/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
frontend/src/components/: app.rs
migrations/: 20230612055450_create_users_table.down.sql  20230612055450_create_users_table.up.sql  20230614143330_create_order_table.down.sql  20230614143330_create_order_table.up.sql  20230614164416_create_order_items_table.down.sql  20230614164416_create_order_items_table.up.sql  20230707154027_create_settings_table.down.sql  20230707154027_create_settings_table.up.sql
models/: Cargo.toml
src/: auth.rs  components.rs  fileserv.rs  lib.rs  main.rs  models.rs  server.rs  state.rs
src/components/: app.rs  auth.rs  empty_view.rs  files.rs  home_page.rs  login.rs  login_otp.rs  logout.rs  manager.rs  not_ready.rs  orders.rs  processor.rs  search.rs  signup.rs  util.rs  view_selector.rs
src/components/auth/: login.rs  login_otp.rs  (+2 more)
src/models/: order.rs  order_item.rs  pricing.rs  report.rs  setting.rs  user.rs  user_order.rs
src/server/: app_state.rs  handlers.rs  mailer.rs  storage.rs  stripe.rs
style/: main.scss  tailwind.css
(+30 files in other folders)
