[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv_codegen = "0.15.0"
gloo = { version = "0.8.0", features = ["futures"] }
graphql_client = "0.12.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
wasm-bindgen-futures = "0.4.35"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
